envalysis 0.3.x
======================

NEW FEATURES

MINOR IMPROVEMENTS
* `loq()` iterates only until significant digits won't change anymore

BUG FIXES

DEPRECATED FUNCTIONS

DEFUNCT FUNCTIONS



envalysis 0.3.3
======================

NEW FEATURES

MINOR IMPROVEMENTS
* First CRAN release
* Better package description

BUG FIXES

DEPRECATED FUNCTIONS

DEFUNCT FUNCTIONS



envalysis 0.3.2
======================

NEW FEATURES

MINOR IMPROVEMENTS

BUG FIXES
* Reimplementation of drc's `mselect()` for `texture()` to get rid of global variables

DEPRECATED FUNCTIONS

DEFUNCT FUNCTIONS



envalysis 0.3.1
======================

NEW FEATURES

MINOR IMPROVEMENTS
* `loq()` now uses iterations instead of estimating the value from `lod()`

BUG FIXES
* Better handling of unbalanced designs in `calibration()`

DEPRECATED FUNCTIONS

DEFUNCT FUNCTIONS
* `make.raw()`, use `rep()` instead ;-)


envalysis 0.3.0
======================

NEW FEATURES
* Starting with testthat

MINOR IMPROVEMENTS
* `signifig()` supports 'siunitx' LaTeX output
* Better data handling in `calibration()`
* Updated man pages

BUG FIXES
* `theme_publish()` updated to work with current ggplot2 versions
* `signifig()` can handle zeros better

DEPRECATED FUNCTIONS

DEFUNCT FUNCTIONS
* `puri.test()`, use lmer on ranks (lme4) with Type II-ANOVA (car) instead


envalysis 0.2.2
======================

NEW FEATURES

MINOR IMPROVEMENTS

BUG FIXES
* Temporary fix to make `mselect()` work
* TODO: Get rid of assignment to .GlobalEnv

DEPRECATED FUNCTIONS

DEFUNCT FUNCTIONS



envalysis 0.2.1
======================

NEW FEATURES

MINOR IMPROVEMENTS
* Switch to drc package for texture curve fitting

BUG FIXES

DEPRECATED FUNCTIONS

DEFUNCT FUNCTIONS



envalysis 0.2.0
======================

NEW FEATURES
* `texture` class for automatic determination of particle size distribution using a hydrometer in accordance with ASTM D422-63(2007)e2

MINOR IMPROVEMENTS
* updated `theme_publish()`
* demo file added

BUG FIXES
